force-app/main/default/objects/RV_PVOP_Cons__c/RV_PVOP_Cons__c.object-meta.xml
<CustomObject>
    <label>RV PVOP Cons</label>
    <nameField>
        <label>RV PVOP Cons</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RV PVOP Cons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>