force-app/main/default/objects/RV_PVOP_Cons__c/fields/BodyDesign__c.field-meta.xml
<CustomField>
    <fullName>BodyDesign__c</fullName>
    <label>BodyDesign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>