force-app/main/default/objects/RV_PVOP_Cons__c/fields/FieldTestConnection__c.field-meta.xml
<CustomField>
    <fullName>FieldTestConnection__c</fullName>
    <label>FieldTestConnection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>