force-app/main/default/objects/RV_PVOP_Cons__c/fields/PilotExhaustPiped__c.field-meta.xml
<CustomField>
    <fullName>PilotExhaustPiped__c</fullName>
    <label>PilotExhaustPiped</label>
    <length>255</length>
    <type>Text</type>
</CustomField>