force-app/main/default/objects/RV_PVOP_Cons__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PTC__c</columns>
    <columns>BodyDesign__c</columns>
    <columns>ManualBlowdown__c</columns>
    <columns>PilotExhaustPiped__c</columns>
    <columns>FieldTestConnection__c</columns>
    <columns>RemoteSense__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>